tests/error/static_else_last_thing_in_the_file.c
// fail "'#else' without matching '#endif'."
#if 0

#else
